LionsTruck/force-app/main/default/objects/OrderItem/fields/L_PS__c.field-meta.xml
<CustomField>
    <fullName>L_PS__c</fullName>
    <description>PS value from Product</description>
    <formula>Product2.L_PS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>