LionsTruck/force-app/main/default/objects/OrderItem/fields/L_ServiceAmount__c.field-meta.xml
<CustomField>
    <fullName>L_ServiceAmount__c</fullName>
    <label>Total Service Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>