LionsTruck/force-app/main/default/objects/OrderItem/fields/L_Tonnage__c.field-meta.xml
<CustomField>
    <fullName>L_Tonnage__c</fullName>
    <formula>Product2.L_Tonnage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tonnage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>