LionsTruck/force-app/main/default/objects/OrderItem/fields/L_TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>L_TotalAmount__c</fullName>
    <description>Service Amount plus Total price</description>
    <formula>L_ServiceAmount__c + ( UnitPrice * AvailableQuantity )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>