LionsTruck/force-app/main/default/objects/OrderItem/validationRules/Prevent_Edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Edit</fullName>
    <active>true</active>
    <description>To now allow the user to update Order Products changes</description>
    <errorConditionFormula>NOT(ISNEW())</errorConditionFormula>
    <errorMessage>Update Order Product information is not allowed.</errorMessage>
</ValidationRule>